fixed spacing around <a

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,7 +1,4 @@
 .starscreen {
   height: 75vh;
 }
-.hal {
-    
 
-}
